--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 </head>
 <body>
 <script src="script.js"></script>
+<input type="button" value="Detener Entrenamiento" onclick="stopTraining= true">
+<input type="button" value="Guardar Modelo" onclick="guardarModelo()">
 
+<br>
+<br>
+JSON File <input type="file" id="upload-json">
+<br>
+Binary File <input type="file" id="upload-weights">
+
+<input type="button" value="Cargar Modelo" onclick="cargarModelo()">
+<br>
+<input type="button" value="Curva de Inferencia" onclick="verCurvaInferencia()">
 </body>
 </html>
