--- a/clasificador.html
+++ b/clasificador.html
@@ -5,14 +5,23 @@
     <title>Clasificador de imagenes</title>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/knn-classifier"></script>
 </head>
 <body>
 <img id="img" crossorigin src="https://i.imgur.com/JlUvsxa.jpg" width="227" heigh="227">
 <div id="descripcion_imagen">
 
-
 </div>
+<button  onclick="addExample(1)">Airpods</button>
+<button  onclick="addExample(2)">Javier</button>
+<button  onclick="addExample(3)">OK</button>
+<button  onclick="addExample(4  )">Rock</button>
     <button onclick="cambiarImagen()">Cambiar Imagen</button>
+
+<video autoplay playsinline muted id="webcam" width="224" height="224"></video>
+
+<div id="consola"></div>
+<div id="consola2"></div>
 <script src="clasificador.js"></script>
 </body>
 </html>
