--- a/clasificador.html
+++ b/clasificador.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/knn-classifier"></script>
+
 </head>
 <body>
 <img id="img" crossorigin src="https://i.imgur.com/JlUvsxa.jpg" width="227" heigh="227">
@@ -22,6 +23,8 @@
 
 <div id="consola"></div>
 <div id="consola2"></div>
+    <button onclick="guardarModelo()">Guadar Modelo </button>
+    <button onclick="cargarModelo()">Cargar Modelo </button>
 <script src="clasificador.js"></script>
 </body>
 </html>
